<resources>
    <string name="app_name">MADSu21-MartaPalermo</string>
    <string name="hello_world">Hello World!</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="e">E</string>
    <string name="f">F</string>
    <string name="pressed">Pressed:</string>
    <string name="about_me">About Me</string>
    <string name="a1_about_me">A1 - About Me</string>
    <string name="a3_clicky_clicky">A3 - Clicky Clicky</string>
    <string name="hello_user_nmy_name_is_marta_palermo_nmy_email_address_is_palermo_m_northeastern_edu">Hello user! \nMy name is Marta Palermo \nMy email address is: palermo.m@northeastern.edu</string>
    <string name="pressed_none">Pressed: none</string>
    <string name="a4_link_collector">A4 - Link Collector</string>
    <string name="todo">TODO</string>
    <string name="add_link">add link</string>
    <string name="testing_testing">testing testing</string>
    <string name="click_the_to_add_url_link">Click the + to add URL link!</string>
    <string name="click_to_add_url_link">click + to add url link</string>
    <string name="add">add</string>
    <string name="cancel">cancel</string>
    <string name="enter_the_url_link_here">Enter the url link here</string>
    <string name="enter_the_name_here">Enter the name here</string>
    <string name="enter_new_url">Enter new URL</string>
    <string name="Add">Add</string>
    <string name="Cancel">Cancel</string>
</resources>