<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/helloWorld"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="234dp"
        android:text="@string/hello_world"
        android:textSize="20dp" />

    <Button
        android:id="@+id/aboutMe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a1_about_me"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_below="@id/helloWorld" />

    <Button
        android:id="@+id/clickyClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a3_clicky_clicky"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/aboutMe" />

    <Button
        android:id="@+id/linkCollector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a4_link_collector"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_below="@id/clickyClick" />

    <Button
        android:id="@+id/locator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="A5 - Locator"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/linkCollector" />

    <Button
        android:id="@+id/service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="A6 - At Your Service"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/locator" />

</RelativeLayout>

